--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "type": "module",
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/cookie-parser": "^1.4.7"
+    "@types/multer": "^1.4.11",
+    "@types/pg": "^8.11.6",
+    "@types/uuid": "^10.0.0",
+    "nodemon": "^3.1.4"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "scripts": {
+    "dev": "tsx watch ./src/index.ts",
+    "start": "tsx ./src/index.ts",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.614.0",
@@ -17,7 +26,13 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.32.0",
     "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
+    "next-auth": "^4.24.7",
+    "pg": "^8.12.0",
+    "tsx": "^4.16.2",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   }
 }
