--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.0",
     "express": "^4.19.2",
